
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:components="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trzepacz"
    android:background="#ff237ea0"
    android:animateLayoutChanges="true">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo3"/>



    <Button
        android:id="@+id/opcja_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ustawieni"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button1"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/szybka_gr"
        android:visibility="gone"
        android:id="@+id/opcja_0"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/opcja_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wielu_gra"
        android:id="@+id/opcja_1"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/opcja_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/osiagniec"
        android:id="@+id/opcja_2"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/opcja_3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"/>




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dwa_gracz"
        android:id="@+id/opcja_4"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/opcja_5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trz_gracz"
        android:id="@+id/opcja_5"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/opcja_6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button1"/>



    <Button
        android:id="@+id/opcja_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gra_onlin"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button1"/>


    <TableLayout
        android:id="@+id/tabelka"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:background="@drawable/button1"
        android:layout_marginBottom="3dp"
        >


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/najdluzsz"
                android:id="@+id/tab_1"
                android:layout_column="1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="right"
                android:text="  0"
                android:layout_weight="4"
                android:id="@+id/tab_2"
                android:layout_column="1" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
          >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/suma_rzut"

                android:id="@+id/tab_3"
                android:layout_column="1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="  0"
                android:layout_weight="4"
                android:layout_gravity="right"
                android:id="@+id/tab_4"
                android:layout_column="1" />

        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/gridview"
        android:visibility="gone"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tabelka"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</RelativeLayout>


