<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ff237ea0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Medium Text"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_online"
        android:layout_toRightOf="@+id/rank"
        android:layout_toLeftOf="@+id/refresh"
        android:layout_toStartOf="@+id/refresh"
        android:textAlignment="gravity"
        android:gravity="center" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/odswiez_w"
        android:id="@+id/refresh"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button2"
        android:layout_margin="2dp"
        android:padding="0dp"
        android:paddingLeft="9dp"
        android:paddingRight="9dp"
    />

    <Button
        style="?android:attr/buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nowa_gra_"
        android:id="@+id/button_online"
        android:layout_below="@+id/refresh"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/refresh"
        android:layout_alignEnd="@+id/refresh"
        android:background="@drawable/button1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_online" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranking_g"
        android:id="@+id/rank"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button2"
        android:layout_margin="2dp"
        android:padding="0dp"
        android:paddingLeft="9dp"
        android:paddingRight="9dp"/>

</RelativeLayout>